plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'priv.rdo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:7.1.0'
	implementation 'com.graphql-java-kickstart:graphql-java-tools:6.2.0'


	runtimeOnly 'com.h2database:h2'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

compileJava {
	options.compilerArgs += ["--enable-preview"]
}

test {
	jvmArgs(['--enable-preview'])
	useJUnitPlatform()
}